# wasp_clone

./: .clang-format  .gitdist  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeCPackOptions.cmake  CMakeLists.txt  CONTRIBUTING.md  CTestConfig.cmake  LICENSE  PackagesList.cmake  ProjectName.cmake  README.md  TPLsList.cmake  Version.cmake
ci/: env.yml  (+12 more)
include/: CMakeLists.txt
include/wasp/: version.h.in
src/core/: CMakeLists.txt  StringPool.cpp  StringPool.h  TokenPool.cpp  TreeNodePool.cpp  TreeNodePool.i.h  wasp_node.h
src/getpot/: CMakeLists.txt  FlexBison.sh  GetPot.bison  GetPot.lex  GetPotInterpreter.cpp  GetPotInterpreter.h  GetPotLexer.cpp  GetPotLexer.h  GetPotParser.cpp  GetPotParser.dot  GetPotParser.hpp  GetPotParser.output  ListGetPot.cpp
src/utils/: CMakeLists.txt  test.cpp
waspcore/: CMakeLists.txt  Definition.cpp  Definition.h  FlexLexer.h  Format.h  Interpreter.cpp  Interpreter.h  Interpreter.i.h  Iterator.h  Object.cpp  Object.h  README.md  StringPool.cpp  StringPool.h  StringPool.i.h  TokenPool.cpp  TokenPool.h  TokenPool.i.h  TreeNodePool.cpp  TreeNodePool.h  TreeNodePool.i.h  decl.h  location.hh  utils.cpp  utils.h  wasp_bug.h  wasp_node.h
waspcore/cmake/: version.h.in
waspcore/test/: CMakeLists.txt  tstDefinition.cpp  tstFormat.cpp  tstObject.cpp  tstStringPool.cpp  tstTokenPool.cpp  tstTreeNodePool.cpp  tstTreeNodeView.cpp  tstWaspBug.cpp  tstWaspUtils.cpp  wasp_harness.h
waspdakota/: CMakeLists.txt  ParametersFile.cpp  ParametersFile.h  README.md
waspdakota/cmake/: Dependencies.cmake
waspdakota/test/: CMakeLists.txt  Paths.h.in  tstParam.cpp  tstSubstitution.cpp
waspddi/: CMakeLists.txt  DDILexer.cpp  DDILexer.h  DDILexer.lex  DDINodeView.cpp  DDINodeView.h  DDINodeView.i.h  DDIParser.bison  DDIParser.cpp  DDIParser.hpp  DDInterpreter.h  DDInterpreter.i.h  FlexBison.sh  README.md  location.hh  position.hh  stack.hh
waspddi/test/: CMakeLists.txt  tstDDI.cpp
waspeddi/: CMakeLists.txt  EDDILexer.cpp  EDDILexer.h  EDDILexer.lex  EDDINodeView.cpp  EDDINodeView.h  EDDINodeView.i.h  EDDIParser.bison  EDDIParser.cpp  EDDIParser.hpp  EDDInterpreter.h  EDDInterpreter.i.h  FlexBison.sh  README.md
waspeddi/test/: CMakeLists.txt  tstEDDI.cpp
waspexpr/: CMakeLists.txt  Expr.bison  Expr.lex  ExprContext.cpp  ExprContext.h  ExprInterpreter.cpp  ExprInterpreter.h  ExprInterpreter.i.h  ExprLexer.cpp  ExprLexer.h  ExprParser.cpp  ExprParser.hpp  FlexBison.sh  ListExpr.cpp  README.md  location.hh  position.hh  stack.hh
waspexpr/cmake/: Dependencies.cmake
waspexpr/test/: CMakeLists.txt  tstExpr.cpp  tstExpr2.cpp  tstExprResults.cpp
waspgetpot/: CMakeLists.txt  FlexBison.sh  GetPot.bison  GetPot.lex  GetPotInterpreter.cpp  GetPotInterpreter.h  GetPotInterpreter.i.h  GetPotLexer.cpp  GetPotLexer.h  GetPotNodeView.cpp  GetPotNodeView.h  GetPotNodeView.i.h  GetPotParser.cpp  GetPotParser.hpp  GetPotParser.output  ListGetPot.cpp  location.hh  position.hh  stack.hh
waspgetpot/test/: CMakeLists.txt  Paths.h.in  tstGetPot.cpp  tstHIVE.cpp
wasphalite/: CMakeLists.txt  DataAccessor.cpp  DataAccessor.h  HaliteInterpreter.h  HaliteInterpreter.i.h  HaliteNodeView.cpp  HaliteNodeView.h  HaliteNodeView.i.h  HaliteWorkflow.cpp  HaliteWorkflow.h  README.md  SubStringIndexer.cpp  SubStringIndexer.h
wasphalite/cmake/: Dependencies.cmake
wasphalite/test/: CMakeLists.txt  Paths.h.in  tstDataAccessor.cpp  tstHalite.cpp  tstHaliteEngine.cpp  tstHaliteErrors.cpp  tstHaliteNodeView.cpp  tstHaliteTreeConstruction.cpp  tstHaliteWorkflow.cpp  tstSubStringIndexer.cpp
wasphit/: CMakeLists.txt  FlexBison.sh  HIT.bison  HIT.lex  HITConfig.h.in  HITInterpreter.cpp  HITInterpreter.h  HITInterpreter.i.h  HITLexer.cpp  HITLexer.h  HITNodeView.cpp  HITNodeView.h  HITNodeView.i.h  HITParser.cpp  HITParser.hpp  README.md
wasphit/test/: CMakeLists.txt  Paths.h.in  tstHIT.cpp  tstHIVE.cpp
wasphive/: AlphaNum.h  CMakeLists.txt  HIVE.cpp  HIVE.h  HIVE.i.h  InputDefinition.h  InputDefinition.i.h  README.md
wasphive/cmake/: Dependencies.cmake
wasphive/test/: CMakeLists.txt  Paths.h.in  tstAutoDoc.cpp  tstDefinition.cpp  tstHIVE.cpp  tstInput2JSON.cpp  tstSON2JSON.cpp
waspjson/: CMakeLists.txt  FlexBison.sh  FlexBisonObject.sh  JSONInterpreter.h  JSONInterpreter.i.h  JSONLexer.cpp  JSONLexer.h  JSONLexer.lex  JSONNodeView.cpp  JSONNodeView.h  JSONNodeView.i.h  JSONObjectLexer.cpp  JSONObjectLexer.h  JSONObjectLexer.lex  JSONObjectParser.bison  JSONObjectParser.cpp  JSONObjectParser.hpp  JSONParser.bison  JSONParser.cpp  JSONParser.hpp  ListJSON.cpp  location.hh  position.hh  stack.hh
waspjson/cmake/: son_config.h.in
waspjson/test/: CMakeLists.txt  tstJSON.cpp  tstJSONView.cpp  tstObjectGeneration.cpp
wasplsp/: CMakeLists.txt  Client.h  ClientImpl.cpp  ClientImpl.h  Connection.h  FlexBison.sh  IOStreamConnection.h  LSP.cpp  LSP.h  LSP.i.h  LSPInterpreter.cpp  LSPInterpreter.h  README.md  Server.h  ServerImpl.cpp  ServerImpl.h  Snippet.bison  Snippet.lex  SnippetInterpreter.h  SnippetInterpreter.i.h  SnippetLexer.cpp  SnippetLexer.h  SnippetManager.cpp  SnippetManager.h  SnippetParser.cpp  SnippetParser.hpp  StreamLock.cpp  StreamLock.h  SymbolIterator.cpp  SymbolIterator.h  SymbolsInterrogator.cpp  SymbolsInterrogator.h  ThreadConnection.h  WaspServer.h  WaspServer.i.h
wasplsp/cmake/: Dependencies.cmake
wasppy/: CMakeLists.txt  Database.py  README.md  drive.py  setup.cfg  setup.py.in  son2py.py  wasp.i.in  wasp.py.in  wasp2py.py  waspdrive.py  xml2obj.py
waspsiren/: CMakeLists.txt  FlexBison.sh  README.md  SIRENInterpreter.cpp  SIRENInterpreter.h  SIRENInterpreter.i.h  SIRENLexer.cpp  SIRENLexer.h  SIRENLexer.lex  SIRENParser.bison  SIRENParser.cpp  SIRENParser.hpp  SIRENResultSet.cpp  SIRENResultSet.h  SIRENResultSet.i.h  location.hh  position.hh  stack.hh
waspson/: CMakeLists.txt  FlexBison.sh  ListSON.cpp  README.md  SONInterpreter.cpp  SONInterpreter.h  SONInterpreter.i.h  SONLexer.cpp  SONLexer.h  SONLexer.lex  SONNodeView.cpp  SONNodeView.h  SONNodeView.i.h  SONParser.bison  SONParser.cpp  SONParser.hpp  location.hh  position.hh  stack.hh
(+508 files in other folders)
